<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">



        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="90dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">


                <ImageView
                    android:id="@+id/pusaka"
                    android:layout_width="310dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/todo"
                    android:padding="8dp"
                    tools:src="@color/colorPrimary" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    style="@style/TextIsi.NamaSenjata"
                    android:id="@+id/nama_senjata"
                    android:text="@string/nama_senjata" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">

                <TextView
                    style="@style/TextIsi.AsalSenjata"
                    android:id="@+id/asal_senjata"
                    android:text="@string/tempat"
                   />

            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp">

                <TextView
                    style="@style/TextIsi.DetailSenjata"
                    android:id="@+id/detail_senjata"
                    android:text="@string/detail" />

            </TableRow>


        </TableLayout>






</ScrollView>